infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: santim-commerce
  labels:
    app.kubernetes.io/part-of: santim-commerce
